# Travel_recomendation_system

./: .env.example  .gitignore  gotogether-e2e22-firebase-adminsdk-fbsvc-8297e38f4d.json  pyproject.toml  readme.md  requirements.txt  server.crt  server.key
data/: all-task-20-overview.csv  all-task-22-overview.csv  cf_HCM.csv  database.csv  not_update.csv
src/: main.py
src/core/: cloud_sql_download.py  fix_label_firebase.py  import_graphQL_location.py
src/routers/: location_tag_extraction_router.py  recomendation_router.py  sentiment_router.py  tag_extraction_router.py
src/service/: embedding_service.py  firebase_service.py  firestore_service.py  geminiAPI_service.py  location_tag_extraction_service.py  recomendation_service.py  sentiment_service.py
src/utils/: contants.py
