[project]
name = "travel-recomendation-system"
version = "0.1.0"
description = "Travel Recommendation API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-cloud-firestore>=2.22.0",
    "google-cloud-storage>=3.4.1",
    "google-generativeai>=0.8.6",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
